syntax = "proto3";

package blockjoy.api.ui_v1;

import "common.proto";

message GetBlockchainRequest {
  RequestMeta meta = 1;
  string id = 2;
}

message GetBlockchainResponse {
  ResponseMeta meta = 1;
  Blockchain blockchain = 2;
}

message ListBlockchainsRequest {
  RequestMeta meta = 1;
}

message ListBlockchainsResponse {
  ResponseMeta meta = 1;
  repeated Blockchain blockchains = 2;
}

/* Blockchain related service */
service BlockchainService {
  /* Returns a single blockchain as identified by its id */
  rpc Get(GetBlockchainRequest) returns (GetBlockchainResponse);
  /* Returns a list of all blockchains */
  rpc List(ListBlockchainsRequest) returns (ListBlockchainsResponse);
}
